Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2296

Cluster errors when using acquire-mode-not-acquired

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 0.5
    • 0.6
    • C++ Broker
    • None

    Description

      Adding a new broker to a cluster while there are clients using not-acquired mode (aka "browse" mode) to retrieve messages without dequeing them can cause inconsistencies that will cause cluster members to abort. Examples of errors that may be seen as a result of this bug:

      2009-12-18 10:29:04 critical cluster(20.0.100.32:23782 READY/error) local error 906715 did not occur on member 20.0.100.33:16960: resource-limit-exceeded: Policy exceeded on A_1, poli\
      cy: size: max=104857600, current=952489; count: max=20000, current=20000; type=reject (../../cpp/src/qpid/broker/QueuePolicy.cpp:83)

      2009-12-21 12:22:07 error Error delivering frames: local error did not occur on all cluster members : invalid-argument: anonymous.a6e88ed1-e69b-4549-b\
      32d-5168f068974d: confirmed < (103+0) but only sent < (99+0) (../../cpp/src/qpid/SessionState.cpp:151) (../../cpp/src/qpid/cluster/ErrorCheck.cpp:89)

      See https://bugzilla.redhat.com/show_bug.cgi?id=541927 for more details.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: